k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webshop
  namespace: webshop
spec:
  parentRefs:
    - name: mygateway
      namespace: default
      sectionName: myhttp
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: webshop-frontend
          port: 80
